k8s/archives/home-controller-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-controller-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-controller-proxy
  template:
    metadata:
      labels:
        app: home-controller-proxy
    spec:
      containers:
        - name: home-controller-proxy
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx
              readOnly: true
              name: home-controller-proxy-conf
            - mountPath: /var/log/nginx
              name: log

      volumes:
        - name: home-controller-proxy-conf
          configMap:
            name: home-controller-proxy-conf
            items:
              - key: nginx.conf
                path: nginx.conf
              - key: virtualhost.conf
                path: virtualhost/virtualhost.conf
        - name: log
          emptyDir: {}
