k8s/archives/home-controller-proxy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: home-controller-proxy
spec:
  selector:
    app: home-controller-proxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
